# eacs-python-and-cpp-testing

./: .gitignore  Dockerfile  LICENSE  README.md
src/: CMakeLists.txt
src/boost.python-example/: CMakeLists.txt  Complex.cpp  Complex_boost.cpp  test_complex.py  ubuntu-deps.sh
src/complex/: .gitignore  CMakeLists.txt  Complex.cpp
src/ctypes-example/: CMakeLists.txt  Complex.cpp  Complex.h  Complex_wrapper.cpp  complex.py  test_complex.py
src/pybind11-example/: CMakeLists.txt  Complex.cpp  Complex_pybind11.cpp  clone-pybind.sh  test_complex.py  ubuntu-deps.sh
src/swig-example/: .gitignore  CMakeLists.txt  Complex.i  test_complex.py  ubuntu-deps.sh
